custom share z-index bug

--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -75,7 +75,7 @@ $base-size: 37.5;
     z-index: 2220!important;
 }
 .mint-toast {
-    z-index: 2224!important;
+    z-index: 2228!important;
 }
 
 %load-more {
